
2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_allocate): fixed check for maximum size to work as
	  intended for values > INT_MAX
	* common.h [HAVE_CONFIG_H]: include config.h (to be moved to coblocal.h)
	* common.h [COB_64_BIT_POINTER]: allow field size up to 2GB

2021-11-01  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h: adjusted ISFINITE definition
	* coblocal.h: removed 'extern "C"' as this header should not
	  be externally included
	* common.h, coblocal.h: moved _MSC_VER comparison macros as those are
	  not relevant to user-space

2021-10-06  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_environment, cob_display_environment): move strlen
	  out of a loop

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: always handle SIGFPE, define manually if needed
	* numeric.c (cob_s32_pow, cob_s64_pow), common.h: new functions for
	  integer exponentiation, see related #702
	* intrinsic.c: replace int_pow definition and use with cob_s32_pow
	* fileio.c [WIN32]: redefine mkdir instead of handling mode parameter
	  via defines when used

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: save-guard against broken cob_module chain in dump
	* termio.c, common.c: allow to explicit disable dump

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (EXTFH3): also handle OP_FLUSH, OP_DELETE_FILE, OP_COMMIT and
	  OP_ROLLBACK before checking record-pointer;
	  set file status 9/100 for unknown op-codes
	* common.c (cob_external_addr): split into muliple functions
	* fileio.c (cob_file_malloc): set the file's number of keys directly
	* fileio.c (cob_file_external_addr): change the way the file is allocated,
	  having only its POINTER be "external" and use cob_file_malloc to allocate
	  and set the attributes
	* common.h (cob_module): new attribute gc_version
	* common.c (cob_check_version): set last modules gc_version
	* fileio.c (cob_cache_file): fix aborts when running GC 2 modules with